--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
 }
 #logo {
     width: 475px;
+    animation-name: logoAnimation;
+    animation-duration: 5s;
 }
 /* step 2 */
 header {
@@ -42,6 +44,7 @@ a:visited {
     align-items: center;
     justify-content: center;
 }
+/* step 10 */
 .gallery {
     display: flex;
     /* flex-direction: row; */
@@ -50,8 +53,79 @@ a:visited {
     justify-content: center;
 
 }
+/* step 9 */
 .gallery img {
     border: 10px solid #50C7C7;
     margin: 10px;
-    flex-basis: 300px;
+    width: 300px;
+}
+@keyframes logoAnimation {
+    from {width: 25px; opacity: 0;}
+    to {width: 475px; opacity: 1;}
+}
+@media only screen and (min-width: 900px) {
+    body > header {
+        position: sticky;
+        top: 0;
+    }
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        /* position: sticky;
+        top: 0;  and step 13*/
+    }
+    .nav_links{
+        flex-direction: row;
+    }
+    .card {
+        flex-basis: 250px;
+    }
+
+
+}
+/** Code for prefers reduced motion **/
+/* Make no changes below this line.
+   *************************************** 
+   */
+@media screen and (prefers-reduced-motion: reduce){
+    /*Turn off transition*/
+    #logo {
+      -webkit-transition: initial; /* sets to default setting */
+      /* transition: initial; sets to default setting */
+      animation: initial;
+    }
+  }
+  /* screen and (min-width: 1000px) flex basis and sticky*/
+@media print {
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-image: none;
+    }
+    header {
+        flex-direction: column;
+    }
+    /* nav link image not avaible  step 17, 21*/
+    nav {
+        width: 100%;
+    }
+    .nav_links {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .pricing {
+        align-items: flex-end;
+        flex-wrap: nowrap;
+    }
+    .card {
+        border: 2px solid #45ADDD;
+        flex-basis: 325px;
+    }
+    .gallery, #gallery {
+        display: none;
+
+    }
+    .card li:nth-child(2)::after {
+        content: "\1F44D"
+    }
 }
